welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: method fonctionTest has return statement; needs result type
  return result
  ^