welcome.lessons.welcome.traversal.Snake.scala.code
def fonctionTest() = {
 var bool = false
 if (getDirection()==Direction.EST) {
   gauche()
   if (estFaceMur()) bool=true
   droite()
 }else if (getDirection()==Direction.OUEST) {
   droite()
   if (estFaceMur()) bool=true
   gauche()
 }
  val result = (estFaceMur() & bool)
  return result
}

override def run() {
  baisseBrosse()
  while (!fonctionTest()) {
     if (!estFaceMur()) {
       avance()
     }else if (getDirection()==Direction.EST) {
       gauche();avance();gauche()
     }else{
       droite();avance();droite()
     }
   }
}